<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
	<!--	<item
			android:id="@+id/action_settings"
			android:orderInCategory="90"
			android:title="@string/action_settings"
			app:showAsAction="ifRoom"/>-->
	<item
		android:id="@+id/add_point"
		android:icon="@drawable/ic_add_24dp"
		android:orderInCategory="5"
		android:title="@string/add"
		app:showAsAction="always"
		/>
	<item
		android:id="@+id/sort"
		android:orderInCategory="6"
		android:title="@string/sort"
		android:icon="@drawable/ic_sort_white_24dp"
		app:showAsAction="always"/>
	<item
		android:id="@+id/reset"
		android:title="@string/reset_count"
		android:orderInCategory="9"
		android:icon="@drawable/ic_reset_white_24dp"
		app:showAsAction="ifRoom"
		/>
	<item
		android:id="@+id/bereken_persentasie"
		android:icon="@drawable/ic_insert_chart_white_24dp"
		android:orderInCategory="7"
		android:title="@string/caclulate_percentage"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/menu_write_to_csv"
		android:orderInCategory="8"
		android:title="@string/db_to_csv"
		android:icon="@drawable/ic_save_white_24dp"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/sound_settings"
		android:icon="@drawable/ic_volume_up_white_24dp"
		android:orderInCategory="10"
		android:title="@string/settings"
		app:showAsAction="ifRoom"
		/>
</menu>
